refactoring, exception handling added